[gd_scene load_steps=24 format=3 uid="uid://dmo4mppjqjtbi"]

[ext_resource type="Texture2D" uid="uid://btdiht4xmcmbq" path="res://Sprites/HunterVoidling.png" id="1_0dv4k"]
[ext_resource type="Script" path="res://Scripts/HunterVoidling.gd" id="1_6xgde"]
[ext_resource type="Shader" uid="uid://nkai2peqtx6a" path="res://Scripts/Shaders/DestructiveVoidling.tres" id="2_hy0wp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_opvr2"]
resource_local_to_scene = true
shader = ExtResource("2_hy0wp")
shader_parameter/BooleanParameter = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_xbiqq"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationTree:parameters/conditions/isAttacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_behavior"
}]
}

[sub_resource type="Animation" id="Animation_tctxi"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_process"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:move_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7ffsv"]
resource_name = "Move"
length = 0.9
loop_mode = 1
step = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_4gkf7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationTree:parameters/conditions/isAttacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:move_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [12.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/BooleanParameter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationTree:parameters/conditions/isTakingDamage")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hg4o1"]
resource_name = "TakingDamage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationTree:parameters/conditions/isTakingDamage")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m73dt"]
_data = {
"Attack": SubResource("Animation_xbiqq"),
"Death": SubResource("Animation_tctxi"),
"Move": SubResource("Animation_7ffsv"),
"RESET": SubResource("Animation_4gkf7"),
"TakingDamage": SubResource("Animation_hg4o1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uapt6"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ybvtp"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dd0tq"]
animation = &"Move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yy3ab"]
animation = &"TakingDamage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_el66b"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iqqdx"]
advance_mode = 2
advance_condition = &"isAttacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qdmqs"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eadxc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2unor"]
advance_mode = 2
advance_condition = &"isTakingDamage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tq3uy"]
advance_mode = 2
advance_condition = &"isTakingDamage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5uosx"]
priority = 0
switch_mode = 2
advance_mode = 2
advance_condition = &"isDead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4hkwt"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_7e5ul"]
states/Attack/node = SubResource("AnimationNodeAnimation_uapt6")
states/Attack/position = Vector2(505, 183)
states/Death/node = SubResource("AnimationNodeAnimation_ybvtp")
states/Death/position = Vector2(711, 183)
states/End/position = Vector2(910, 183)
states/Move/node = SubResource("AnimationNodeAnimation_dd0tq")
states/Move/position = Vector2(505, 110)
states/Start/position = Vector2(312, 110)
states/TakingDamage/node = SubResource("AnimationNodeAnimation_yy3ab")
states/TakingDamage/position = Vector2(711, 110)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_el66b"), "Move", "Attack", SubResource("AnimationNodeStateMachineTransition_iqqdx"), "Attack", "Move", SubResource("AnimationNodeStateMachineTransition_qdmqs"), "Death", "End", SubResource("AnimationNodeStateMachineTransition_eadxc"), "Move", "TakingDamage", SubResource("AnimationNodeStateMachineTransition_2unor"), "Attack", "TakingDamage", SubResource("AnimationNodeStateMachineTransition_tq3uy"), "TakingDamage", "Death", SubResource("AnimationNodeStateMachineTransition_5uosx"), "TakingDamage", "Move", SubResource("AnimationNodeStateMachineTransition_4hkwt")]
graph_offset = Vector2(39, -4)

[node name="HunterVoidling" type="Node2D"]
script = ExtResource("1_6xgde")
move_speed = 12.0
current_health = 3

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 48.0
target_desired_distance = 48.0
avoidance_enabled = true
radius = 8.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_opvr2")
texture = ExtResource("1_0dv4k")
hframes = 6
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_m73dt")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
process_mode = 3
tree_root = SubResource("AnimationNodeStateMachine_7e5ul")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/isAttacking = false
parameters/conditions/isDead = false
parameters/conditions/isTakingDamage = false

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HuntCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="UpdateHuntTargetPositionTimer" type="Timer" parent="."]
autostart = true

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="HuntCooldownTimer" to="." method="_on_hunt_cooldown_timer_timeout"]
[connection signal="timeout" from="UpdateHuntTargetPositionTimer" to="." method="_on_update_hunt_target_position_timer_timeout"]
